tests/More/Good/86.tig
let
 	function a() = print("haha")
 	var i := 0
 	function a() = print("haha")
in
	a()
end
